--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
                 <p>Professional Tennis Cricket Player | Sikar, Rajasthan</p>
             </div>
             <div class="copyright">
-                <p>Developed by <a href="https://developer-rs5.netlify.app" class="developer-link" target="_blank">Rishabh Sharma</a></p>
+                <p>Developed by <a href="https://developer-rs.zenuxshost.fun" class="developer-link" target="_blank">Rishabh Sharma</a></p>
                 <p class="powered-by">Powered by Zenuxs</p>
             </div>
         </div>
